
Changelog:
==========

v1.05

- Changes / Features

New translations: Traditional Chinese (thanks to KK Tong)
Updated translations: Greek, Portuguese

- Fixes

v1.04

- Changes / Features

New option to enable video copy on ps3
RAW images thumbnail support: CR2/CRW/PEF/NEF/ORF/SRF/MRW/DNG/ARW/RAF
New translations: Spanish (thanks to Jose from www.playstationhoy.com), Dutch (thanks to Vincent Meylof), German (thanks to Jeuki), Russian (thanks to Peter Klassen), Polish (thanks to Maciej Bocian), Greek (thanks to Alexander Polichroniadis), Portuguese (thanks to Hugo Sousa), Finnish (thanks to Ove Sentlig), Norwegian (thanks to Ball80 and Topguy), Swedish (thanks to Dusan Ilic) and Japanese (thanks to Yu)
New extensions supported: SHN/M2V/M2P
tsMuxer engine can now mux or reencode in AC3/PCM all audio tracks in real time
Add the experimental mencoder build for multicore on OSX
DVR-MS windows remuxer now included by default

- Fixes

tsMuxer's AC3/LPCM encode/muxing + Mencoder's LPCM remuxing now working on Linux
Fixed LPCM seeking issue
Fixed regression with PicasaWeb images feed
Changes in subtitles loading / Fonts support (Default/ASS/Embedded Fonts)
Fixed channels order with tsMuxer engine's DTS->AC3 option
Transcode buffer wasn't fully released after end of video
Fixed bug with shared folders selection on Windows
Fixed periodic alive messages sent to ps3
Better dvr-ms media info retrieval
Updated ffmpeg/mplayer/mencoder/mt builds on Windows and OSX (slight H264 speedup for singlecore)
Buffer issues with transcoded audio files lasting more than 10 minutes
Fixed RSS parsing with some feeds

v1.03

- Changes / Features

Customize encoding parameters (along with default ones) for any given container/codec/property combination (purpose: A/V sync, playback issues, and tweaking for advanced users)
Ability to select networking interface
OSX 10.4 Tiger support (Intel only)
Settings reorganization